--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         <div class="container">
 
           <div class="column is-centered has-text-centered">
-            <img src="static/figures/DS_statistics.png" alt="Architecture of our system" />
+            <img src="static/figures/DS_statistics.png" alt="Dataset statistics" />
           </div>
         </div>
       </div>
